# diesel-demo

./: Cargo.toml  README.md
migrations/2020-08-29-144601_create_posts/: up.sql
src/: lib.rs  models.rs  schema.rs
