[package]
name = "diesel_demo"
version = "0.1.0"
authors = ["zhiluniao <huangshunle_gxu@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["mysql","chrono"]}
dotenv = "0.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4.15"